Update JDK related content in README